2004-04-14	blytkerchan	prepare for distribution
	* Makefile.am [DIST_SUBDIRS]: new variable
	* TODO: re-organize
	
2004-04-12	blytkerchan	making the array atmomically correct
	* Makefile.am [libcontain_la_SOURCES]: add arch/@ARCH@/set.c
	* array.c: include arch/include/set.h 
	include arch/include/compare_and_exchange.h
	(array_put): use compare_and_exchange to set the value and see if there already was one
	(array_push_back): condense before adding to make sure there's nothing where we add
	use atomic_set to set the value
	(array_resize): indent
	(array_copy): copy condensed attribute
	(array_deep_copy): implement
	(array_foreach): ditto
	(array_condense): set condensed attribute
	* array.h [array_t]: new condensed attribute
	[array_valcopy_func_t]: new type
	[array_foreach_func_t]: ditto
	(array_deep_copy): new function
	(array_foreach): ditto
	
2004-04-08	blytkerchan	license update
	* Hash.cc: update the copyright notice's years
	* Hash.h: ditto
	* IniHash.cc: ditto
	* IniHash.h: ditto
	* IntHash.cc: ditto
	* IntHash.h: ditto
	* NocaseStringHash.cc: ditto
	* NocaseStringHash.h: ditto
	* StringHash.cc: ditto
	* StringHash.h: ditto
	* c_interface.cc: ditto
	* c_interface.h: ditto
	* hash.c: ditto
	* hash.h: ditto
	* list.c: ditto
	* list.h: ditto
	* queue.c: ditto
	* queue.h: ditto
	* stack.c: ditto
	* stack.h: ditto
	* array.c: apply license
	* array.h: ditto
	
2004-04-05	blytkerchan
	* Hash.cc (Hash::for_each): dereference value field of mapping (in stead of non-existance val field)
	* c_interface.cc (cxx_hash_for_each): new function
	* c_interface.h (cxx_hash_for_each): ditto
	* hash.c (hash_foreach): call cxx_hash_for_each

2004-04-02	blytkerchan
	* hash.h (hash_foreach): correct prototype

	* hash.h (hash_foreach): new function
	* hash.c (hash_search): call hash_foreach
	(hash_foreach): new function

2004-03-31	blytkerchan
	* Hash.cc (Hash::for_each): new function
	* Hash.h (Hash::foreach_func_t): new type
	(Hash::for_each): new function